2008-09-10  Daniel Morgan <monodanmorg@yahoo.com>

	* Test/TestOracleClient.cs: fix typo,
	  enable more test,
          Tests pass for parameters for Character, Number, and Date
	  for Input, Output, InputOutput, and ReturnValue and
	  situations when any of these could be DBNull.Value

	* System.Data.OracleClient/OracleParameter.cs: fix
	handling of parameters for character, number, and date
	types.  Need to redo all the other types based on the above.

	* System.Data.OracleClient.Oci/OciDefineHandle.cs: rename private
	method DefineLong to DefineLongVarChar

2008-09-06  Daniel Morgan <monodanmorg@yahoo.com>

	* Test/TestOracleClient.cs: get oracle connected tests
	going again
	
	*  System.Data.OracleClient.Oci/OciDefineHandle.cs
	* System.Data.OracleClient/OracleDataReader.cs
	* System.Data.OracleClient/OracleCommand.cs: fix character
	field value for a reader that was retrieved from a REF CURSOR.
	It was failing due to OCI_INVALID_HANDLE - resolve the error
	by passing a connection object which has a valid environment
	handle.

	* System.Data.OracleClient.Oci/OciCalls.cs: correct 
	call to OCIDefineByPos

	* System.Data.OracleClient/OracleParameter.cs: better way to
	determine if the input value Is Null instead of using reflection.
	Flush - Re-arraning how variables are being bound.

	* System.Data.OracleClient/OciGlue.cs: add function
	to convert OCI Return / Error Status Code to a String Description
 
	* System.Data.OracleClient.Oci/OciErrorHandle.cs: better
	error handling

2008-09-04  Daniel Morgan <monodanmorg@yahoo.com>

	* System.Data.OracleClient/OracleDataReader.cs: return true
	in NextResult if another result	

2008-09-04  Daniel Morgan <monodanmorg@yahoo.com>
	
	* System.Data.OracleClient/OracleCommand.cs: removed AssertNoDataReader
	because oracle allows multiple result sets and has since .NET 1.0,
	fix bug where REF CURSOR would not work for ExecuteReader or
	filling a DataSet via an OracleDataAdapter.  The REF CURSOR is used to